--- a/public/nav.css
+++ b/public/nav.css
@@ -1,19 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 .nav-container {
-    background-color: tomato;
+  background-color: tomato;
 }
 
 .nav {
-    display: flex;
-    color: #333;
-    padding: 1em;
-    font-family: 'Oswald', sans-serif;
-    font-size: .5em;
-    width: 30%;
-    justify-content: space-around;
+  display: flex;
+  color: #333;
+  padding: 1em;
+  font-family: 'Oswald', sans-serif;
+  font-size: .5em;
+  width: 30%;
+  justify-content: space-around;
+}
+
+.nav a {
+  color: #333;
+  text-decoration: none;
 }
 
 .nav *:hover {
-    color: #fff;
-    cursor: pointer;
+  color: #fff;
+  cursor: pointer;
 }
