--- a/public/nav.css
+++ b/public/nav.css
@@ -1,16 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald');
-.nav-container {
-  background-color: tomato;
-}
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One|Raleway');
 
 .nav {
+  background: linear-gradient(to right, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #485563;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */
   display: flex;
+  flex-direction: column;
+  height: 100vh;
   color: #333;
   padding: 1em;
-  font-family: 'Oswald', sans-serif;
-  font-size: .5em;
-  width: 30%;
-  justify-content: space-around;
+  padding-left: 50px;
+  padding-bottom: 0px;
+  font-family: 'Fjalla One', sans-serif;
+  font-size: 2rem;
+  width: 20%;
+  align-items: flex-end;
 }
 
 .nav a {
@@ -18,7 +22,17 @@
   text-decoration: none;
 }
 
+.nav h1{
+  margin: 0;
+  text-transform: uppercase;
+    
+}
+
 .nav *:hover {
   color: #fff;
   cursor: pointer;
+}
+
+.copy {
+  font-family: 'Raleway', sans-serif;
 }
