--- a/public/landing.css
+++ b/public/landing.css
@@ -1,6 +1,14 @@
 .landing-page {
-    background-image: url('https://i.redd.it/1owsqxyv774z.jpg');
+    /*background-image: url('https://i.redd.it/1owsqxyv774z.jpg');*/
     background-size: cover;
     background-position: center;
     width: 100vw;
+    background: 
+    /* top, transparent red, faked with gradient */ 
+    linear-gradient(
+      rgba(31,31,31, .9), 
+      rgba(0, 0, 0, .9)
+    ),
+    /* bottom, image */
+    url('https://i.redd.it/1owsqxyv774z.jpg');
 }
