--- a/public/nav.css
+++ b/public/nav.css
@@ -1,21 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Fjalla+One|Raleway');
 
 .nav {
-  background: linear-gradient(to right, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: #485563;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */
+  background: #485563;
   display: flex;
   flex-direction: column;
   height: 100vh;
   color: #333;
-  max-width: 300px;
-  padding: 1em;
-  padding-left: 50px;
-  padding-bottom: 0px;
+  position: fixed;
   font-family: 'Fjalla One', sans-serif;
-  font-size: 2rem;
-  width: 20%;
+  font-size: 1.5rem;
+  width: 15vw;
   align-items: flex-end;
+  padding-top: 1em;
 }
 
 .nav a {
@@ -25,6 +21,7 @@
 
 .nav h1{
   margin: 0;
+  margin-right: .5em;
   text-transform: uppercase;
     
 }
@@ -34,6 +31,3 @@
   cursor: pointer;
 }
 
-.copy {
-  font-family: 'Raleway', sans-serif;
-}
