--- a/public/styles/landing.css
+++ b/public/styles/landing.css
@@ -6,5 +6,5 @@
       rgba(31,31,31, .1), 
       rgba(0, 0, 0, .9)
     ),
-    url('https://i.redd.it/9fam18ma765z.jpg');
+    url('public/img/landing-page/3.jpg');
 }
