--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,7 +8,7 @@
   color: #333;
   position: fixed;
   font-family: 'Fjalla One', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   width: 15vw;
   align-items: flex-end;
   padding-top: 1em;
