added axios and made call to quote api

--- a/public/styles/landing.css
+++ b/public/styles/landing.css
@@ -5,6 +5,5 @@
     linear-gradient(
       rgba(31,31,31, .1), 
       rgba(0, 0, 0, .9)
-    ),
-    url('public/img/landing-page/3.jpg');
+    )
 }
