--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -4,10 +4,20 @@
     width: 85vw;
     margin-left: 15vw;
     height: 100vh;
+    padding: 1em;
+        display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .copy {
   font-family: 'Raleway', sans-serif;
   margin: 0;
   padding: 1em;
+}
+
+.card {
+  width: 25vw;
+  margin-top: .5em;
+  margin-bottom: .5em;
 }
