--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -4,7 +4,7 @@
     width: 85vw;
     margin-left: 15vw;
     height: 100vh;
-    padding: 1em;
+    padding: 1em 2em;
         display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -20,4 +20,10 @@
   width: 25vw;
   margin-top: .5em;
   margin-bottom: .5em;
+  max-width: 450px;
+}
+
+img {
+  width: 360px;
+  height: 260px;
 }
