--- a/public/styles/news.css
+++ b/public/styles/news.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Heebo:100');
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One|Raleway');
 
 .news-container {
     display: flex;
