--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,9 +5,6 @@
     margin-left: 15vw;
     height: 100vh;
     padding: 1em 2em;
-        display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
 }
 
 .copy {
@@ -22,7 +19,9 @@
   margin-bottom: .5em;
   max-width: 450px;
 }
-
+.card:hover {
+  box-shadow: 0 6px 6px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+}
 .title {
   font-family: 'Fjalla One', sans-serif;
     line-height: 1.5em;
@@ -36,3 +35,4 @@ img {
   height: 300px;
   max-width: 100%;
 }
+
