--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -4,7 +4,6 @@
     width: 85vw;
     margin-left: 15vw;
     height: 100vh;
-    padding: 1em 2em;
 }
 
 .copy {
@@ -18,6 +17,7 @@
   margin-top: .5em;
   margin-bottom: .5em;
   max-width: 450px;
+  cursor: pointer;
 }
 .card:hover {
   box-shadow: 0 6px 6px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
