--- a/public/styles/comic.css
+++ b/public/styles/comic.css
@@ -1,5 +1,4 @@
 
-/* @import url('https://fonts.googleapis.com/css?family=Fjalla+One|Raleway'); */
 @import url('https://fonts.googleapis.com/css?family=Coda:800');
 .comic-page {
     display: flex;
@@ -21,6 +20,23 @@
     font-size: .7em;
 }
 
+.show-all__inactive {
+    margin-left: 1em;
+    font-family: 'Coda';
+    color: #fff;
+    font-size: .8em;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.show-all__active {
+    color: #333;
+    margin-left: 1em;
+    font-family: 'Coda';
+    font-size: .8em;
+    cursor: pointer;
+    text-transform: uppercase;
+}
 
 .comic-heading-title {
     margin: 0;
