--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Coda:800');
 
 .nav {
-  background: #485563;
+  background:#333;
   display: flex;
   color: #fff;
    position: fixed; 
@@ -13,7 +13,7 @@
 }
 
 .nav a {
-  color: #333;
+  color: #ccc;
   text-decoration: none;
 }
 
