--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,41 +1,202 @@
-
-
+@import url('https://fonts.googleapis.com/css?family=Heebo:100');
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One|Raleway');
+@import url('https://fonts.googleapis.com/css?family=Coda:800');
+// GLOBAL
 *:focus {
-  outline: none;
+  outline: 3px solid orange;
+}
+
+*{
+  box-sizing: border-box;
 }
 
 img {
   width: 100%;
 }
 
-.page-container {
+a {
+  text-decoration: none;
+}
+
+button {
+  border: none;
+}
+
+.wrapper {
     padding-top: 70px;
     height: 100vh;
+    &--home {
+      display: flex;
+    }
+    &--news {
+      padding-left:2em;
+      padding-right:2em;
+    }
+}
+// NAVIGATION
+
+.nav {
+  background: #333;
+  display: flex;
+  position: fixed;
+  font-family: 'Coda', sans-serif;
+  width: 100vw;
+  z-index: 999;
+  height: 2.5em;
+  align-items: center;
+  padding-left: 35px;
+
+  &__link {
+    color: #ccc;
+    margin: 0;
+    font-size: 1.5em;
+    text-decoration: none;
+    text-transform: uppercase;
+    &:hover {
+      color: #fff;
+    }
+  }
 }
 
-.card {
-    width: 22vw;
-    margin-top: .5em;
-    margin-bottom: .5em;
-    max-width: 450px;
-    padding: 1em;
-    height: 300px;
-    background-color: #fff;
-    border: solid #ccc 1px;
-    cursor: pointer;
+.nav__link + .nav__link {
+  margin-left: .5em;
 }
-.card:hover {
-  box-shadow: 0 6px 6px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+
+// LANDING PAGE
+
+.landing-page {
+  display: flex;
+
 }
-.title {
-  font-family: 'Fjalla One', sans-serif;
-    line-height: 1.5em;
+
+.quote-container {
+height: 30vh;
+width: 100vw;
+color: #fff;
+font-family: 'Coda', sans-serif;
+font-size: 2vw;
+padding: 1em;
+display: flex;
+align-items: center;
+flex-direction: column;
+justify-content: center;
+/* background-color: rgba(0,0,0,.5); */
 }
-.title.is-4 {
+
+.byline {
+font-size: .5em
+}
+
+
+// NEWS PAGE
+
+
+.news-container {
+    display: flex;
+    flex-direction: column;
+    &__title {
+        font-family: 'Heebo', sans-serif;
+        font-size: 2vw;
+        font-weight: 100;
+        padding-top: .75em;
+        padding-bottom: .75em;
+        border-top: #ccc solid 1px;
+        text-transform: uppercase;
+        cursor: pointer;
+    }
+    &--hide-news {
+        display: none;
+    }
+    &--show-news {
+        display: flex;
+        padding-top: .75em;
+        padding-bottom: .75em;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+}
+
+.news-card {
+    &__title{
+      font-family: 'Fjalla One', sans-serif;
+      line-height: 1.5em;
+      color: #333;
       font-size: .8em;
+    }
+    &__image {
+      height: 200px;
+    }
+    &__button {
+      width: 22vw;
+      margin-top: .5em;
+      margin-bottom: .5em;
+      max-width: 450px;
+      padding: 1em;
+      height: 300px;
+      background-color: #fff;
+      border: solid #ccc 1px;
+      cursor: pointer;
+      &:hover {
+        box-shadow: 0 6px 6px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+      }
+    }
+  }
 
-}
-
-.card-image {
-  height: 200px;
-}
+// COMICS
+  .publisher-heading {
+    height: 76px;
+    background-color: tomato;
+    &__title {
+      margin: 0;
+      padding: 0;
+      display: inline-block;
+      font-size: 65px;
+      transform: scale(1, 1.7);
+      color: #fff;
+      margin-left: .5em;
+      font-family: 'Coda';
+    }
+  }
+  
+  .comic-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    justify-content: flex-start;
+    &__comic {
+      width: 23%;
+      height: 470px;
+      margin-left: 1%;
+      border: 1px solid #ccc;
+      padding: 1em;
+      margin-top: .5em;
+      margin-bottom: .5em;
+      margin-right: 1%;
+    }
+    &__title {
+      font-size: .8em;
+      font-family: 'Fjalla One', sans-serif;
+      color: #333;
+    }
+  }
+  
+  .show-all__inactive {
+    color: #fff;
+    margin-left: 1em;
+    font-family: 'Coda';
+    font-size: .8em;
+    cursor: pointer;
+    text-transform: uppercase;
+  }
+  
+  .show-all__active {
+    color: #333;
+    margin-left: 1em;
+    font-family: 'Coda';
+    font-size: .8em;
+    cursor: pointer;
+    text-transform: uppercase;
+  }
+  
