fixing date on image comics and displaying coin prices

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -175,6 +175,11 @@ font-size: .5em
       font-family: 'Fjalla One', sans-serif;
       color: #333;
     }
+    &__date {
+      font-size: .8em;
+      font-family: 'Fjalla One', sans-serif;
+      color: #333;
+    }
   }
   
   .show-all__inactive {
