style coins page

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -32,6 +32,10 @@ button {
       padding-left:2em;
       padding-right:2em;
     }
+    &--coins {
+      background-color: goldenrod;
+      font-family: 'Fjalla One', sans-serif;
+    }
 }
 // NAVIGATION
 
