--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -157,6 +157,12 @@ font-size: .5em
     }
   }
   
+  .comicSearch {
+    margin-top: 2em;
+    margin-bottom: 2em;
+    margin-left: 2em;
+  }
+
   .comic-container {
     display: flex;
     flex-wrap: wrap;
@@ -166,7 +172,8 @@ font-size: .5em
     justify-content: flex-start;
     &__comic {
       width: 23%;
-      height: 470px;
+      height: 530px;
+      min-height: 530px;
       margin-left: 1%;
       border: 1px solid #ccc;
       padding: 1em;
