--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -141,6 +141,11 @@ button {
 }
 
 // COMICS
+.cvlogo {
+  width: 4em;
+  margin-top: 40px;
+}
+
 .publisher-heading {
   height: 76px;
   margin-top: 2em;
@@ -260,6 +265,7 @@ button {
 
 .comic-results__image {
   width: 100%;
+  height: 400px;
 }
 .comic-container {
   display: flex;
@@ -270,8 +276,8 @@ button {
   justify-content: flex-start;
   &__comic {
     width: 23%;
-    height: 570px;
-    min-height: 530px;
+    // height: 570px;
+    // min-height: 530px;
     margin-left: 1%;
     border: 1px solid #ccc;
     padding: 1em;
