--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -270,15 +270,20 @@ button {
   min-height: 150px;
   margin-bottom: 2em;
   opacity: 1;
-  // transition: opacity 1.25s ease-in-out;
-  // -moz-transition: opacity 1.25s ease-in-out;
-  // -webkit-transition: opacity 1.25s ease-in-out;
+  transition: opacity 2.25s ease-in-out;
+  -moz-transition: opacity 2.25s ease-in-out;
+  -webkit-transition: opacity 2.25s ease-in-out;
 
 }
 
 .comic-results-container-hide {
   opacity: 0;
+  display: flex;
+  flex-wrap: wrap;
+  min-height: 150px;
+  margin-bottom: 2em;
 }
+
 
 .comic-results {
   display: flex;
